making main dataframe
building dataframe for word list to be explored

--- a/word_works.ipynb
+++ b/word_works.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "from english_words import english_words_set\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -40,6 +41,142 @@
    "source": [
     "# this should be an empty list, checking to be sure we do not have non alpha chars in the words\n",
     "print([i for i in words5 if not i.isalpha()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_words = pd.DataFrame(words5)\n",
+    "df_words.columns=['words']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_words['first'] = df_words['words'].str.slice(0,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>words</th>\n",
+       "      <th>first</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>llama</td>\n",
+       "      <td>l</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>chaos</td>\n",
+       "      <td>c</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>monad</td>\n",
+       "      <td>m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>madam</td>\n",
+       "      <td>m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>annoy</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2465</th>\n",
+       "      <td>swank</td>\n",
+       "      <td>s</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2466</th>\n",
+       "      <td>opium</td>\n",
+       "      <td>o</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2467</th>\n",
+       "      <td>utile</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2468</th>\n",
+       "      <td>cream</td>\n",
+       "      <td>c</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2469</th>\n",
+       "      <td>cheat</td>\n",
+       "      <td>c</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2470 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      words first\n",
+       "0     llama     l\n",
+       "1     chaos     c\n",
+       "2     monad     m\n",
+       "3     madam     m\n",
+       "4     annoy     a\n",
+       "...     ...   ...\n",
+       "2465  swank     s\n",
+       "2466  opium     o\n",
+       "2467  utile     u\n",
+       "2468  cream     c\n",
+       "2469  cheat     c\n",
+       "\n",
+       "[2470 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_words"
    ]
   },
   {
