--- a/word_works.ipynb
+++ b/word_works.ipynb
@@ -55,16 +55,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_words['first'] = df_words['words'].str.slice(0,1)"
+    "df_words['first'] = df_words['words'].str.slice(0,1)\n",
+    "df_words['second'] = df_words['words'].str.slice(1,2)\n",
+    "df_words['third'] = df_words['words'].str.slice(2,3)\n",
+    "df_words['fourth'] = df_words['words'].str.slice(3,4)\n",
+    "df_words['fifth'] = df_words['words'].str.slice(4,5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -90,6 +94,10 @@
        "      <th></th>\n",
        "      <th>words</th>\n",
        "      <th>first</th>\n",
+       "      <th>second</th>\n",
+       "      <th>third</th>\n",
+       "      <th>fourth</th>\n",
+       "      <th>fifth</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -97,86 +105,377 @@
        "      <th>0</th>\n",
        "      <td>llama</td>\n",
        "      <td>l</td>\n",
+       "      <td>l</td>\n",
+       "      <td>a</td>\n",
+       "      <td>m</td>\n",
+       "      <td>a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>chaos</td>\n",
        "      <td>c</td>\n",
+       "      <td>h</td>\n",
+       "      <td>a</td>\n",
+       "      <td>o</td>\n",
+       "      <td>s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>monad</td>\n",
        "      <td>m</td>\n",
+       "      <td>o</td>\n",
+       "      <td>n</td>\n",
+       "      <td>a</td>\n",
+       "      <td>d</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>madam</td>\n",
+       "      <td>m</td>\n",
+       "      <td>a</td>\n",
+       "      <td>d</td>\n",
+       "      <td>a</td>\n",
        "      <td>m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>annoy</td>\n",
        "      <td>a</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2465</th>\n",
-       "      <td>swank</td>\n",
-       "      <td>s</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2466</th>\n",
-       "      <td>opium</td>\n",
+       "      <td>n</td>\n",
+       "      <td>n</td>\n",
        "      <td>o</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2467</th>\n",
-       "      <td>utile</td>\n",
-       "      <td>u</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2468</th>\n",
-       "      <td>cream</td>\n",
-       "      <td>c</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2469</th>\n",
-       "      <td>cheat</td>\n",
-       "      <td>c</td>\n",
+       "      <td>y</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2470 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      words first\n",
-       "0     llama     l\n",
-       "1     chaos     c\n",
-       "2     monad     m\n",
-       "3     madam     m\n",
-       "4     annoy     a\n",
-       "...     ...   ...\n",
-       "2465  swank     s\n",
-       "2466  opium     o\n",
-       "2467  utile     u\n",
-       "2468  cream     c\n",
-       "2469  cheat     c\n",
-       "\n",
-       "[2470 rows x 2 columns]"
+       "   words first second third fourth fifth\n",
+       "0  llama     l      l     a      m     a\n",
+       "1  chaos     c      h     a      o     s\n",
+       "2  monad     m      o     n      a     d\n",
+       "3  madam     m      a     d      a     m\n",
+       "4  annoy     a      n     n      o     y"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_words"
+    "df_words.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_counts = df_words['first'].value_counts()\n",
+    "df_counts_second = df_words['second'].value_counts()\n",
+    "df_counts_third = df_words['third'].value_counts()\n",
+    "df_counts_fourth = df_words['fourth'].value_counts()\n",
+    "df_counts_fifth = df_words['fifth'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_count_all = pd.merge(df_counts,df_counts_second,how='left',left_index=True, right_index=True)\n",
+    "df_count_all = pd.merge(df_count_all,df_counts_third,how='left',left_index=True, right_index=True)\n",
+    "df_count_all = pd.merge(df_count_all,df_counts_fourth,how='left',left_index=True, right_index=True)\n",
+    "df_count_all = pd.merge(df_count_all,df_counts_fifth,how='left',left_index=True, right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>second</th>\n",
+       "      <th>third</th>\n",
+       "      <th>fourth</th>\n",
+       "      <th>fifth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>s</th>\n",
+       "      <td>399</td>\n",
+       "      <td>23</td>\n",
+       "      <td>85</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>66.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>224</td>\n",
+       "      <td>42</td>\n",
+       "      <td>61</td>\n",
+       "      <td>162.0</td>\n",
+       "      <td>41.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>203</td>\n",
+       "      <td>18</td>\n",
+       "      <td>56</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>p</th>\n",
+       "      <td>158</td>\n",
+       "      <td>58</td>\n",
+       "      <td>59</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>t</th>\n",
+       "      <td>157</td>\n",
+       "      <td>87</td>\n",
+       "      <td>123</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>269.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>157</td>\n",
+       "      <td>334</td>\n",
+       "      <td>334</td>\n",
+       "      <td>199.0</td>\n",
+       "      <td>93.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f</th>\n",
+       "      <td>130</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>32.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>m</th>\n",
+       "      <td>125</td>\n",
+       "      <td>40</td>\n",
+       "      <td>60</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>g</th>\n",
+       "      <td>124</td>\n",
+       "      <td>10</td>\n",
+       "      <td>73</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>31.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>107</td>\n",
+       "      <td>19</td>\n",
+       "      <td>78</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>110.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>l</th>\n",
+       "      <td>98</td>\n",
+       "      <td>212</td>\n",
+       "      <td>136</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>177.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r</th>\n",
+       "      <td>83</td>\n",
+       "      <td>268</td>\n",
+       "      <td>187</td>\n",
+       "      <td>185.0</td>\n",
+       "      <td>136.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w</th>\n",
+       "      <td>81</td>\n",
+       "      <td>46</td>\n",
+       "      <td>23</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>h</th>\n",
+       "      <td>76</td>\n",
+       "      <td>163</td>\n",
+       "      <td>10</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>154.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>e</th>\n",
+       "      <td>72</td>\n",
+       "      <td>262</td>\n",
+       "      <td>197</td>\n",
+       "      <td>261.0</td>\n",
+       "      <td>468.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v</th>\n",
+       "      <td>43</td>\n",
+       "      <td>13</td>\n",
+       "      <td>51</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>o</th>\n",
+       "      <td>42</td>\n",
+       "      <td>308</td>\n",
+       "      <td>253</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>66.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n</th>\n",
+       "      <td>39</td>\n",
+       "      <td>82</td>\n",
+       "      <td>153</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>146.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i</th>\n",
+       "      <td>34</td>\n",
+       "      <td>203</td>\n",
+       "      <td>262</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>k</th>\n",
+       "      <td>29</td>\n",
+       "      <td>11</td>\n",
+       "      <td>9</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>117.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>q</th>\n",
+       "      <td>26</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>j</th>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>u</th>\n",
+       "      <td>23</td>\n",
+       "      <td>209</td>\n",
+       "      <td>179</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>y</th>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>24</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>373.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>z</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>x</th>\n",
+       "      <td>3</td>\n",
+       "      <td>16</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   first  second  third  fourth  fifth\n",
+       "s    399      23     85   178.0   66.0\n",
+       "c    224      42     61   162.0   41.0\n",
+       "b    203      18     56    25.0   10.0\n",
+       "p    158      58     59    61.0   64.0\n",
+       "t    157      87    123   156.0  269.0\n",
+       "a    157     334    334   199.0   93.0\n",
+       "f    130       6     25    45.0   32.0\n",
+       "m    125      40     60    76.0   53.0\n",
+       "g    124      10     73    86.0   31.0\n",
+       "d    107      19     78    74.0  110.0\n",
+       "l     98     212    136   153.0  177.0\n",
+       "r     83     268    187   185.0  136.0\n",
+       "w     81      46     23    24.0   19.0\n",
+       "h     76     163     10    34.0  154.0\n",
+       "e     72     262    197   261.0  468.0\n",
+       "v     43      13     51    51.0    NaN\n",
+       "o     42     308    253   137.0   66.0\n",
+       "n     39      82    153   190.0  146.0\n",
+       "i     34     203    262   183.0   19.0\n",
+       "k     29      11      9    64.0  117.0\n",
+       "q     26       6      1     NaN    NaN\n",
+       "j     23       2      3     2.0    NaN\n",
+       "u     23     209    179    87.0    7.0\n",
+       "y      9      30     24    10.0  373.0\n",
+       "z      5       2     16    24.0    5.0\n",
+       "x      3      16     12     3.0   14.0"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_count_all"
    ]
   },
   {
