--- a/word_works.ipynb
+++ b/word_works.ipynb
@@ -170,7 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_aplha = ['a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +478,7 @@
        "x      3      16     12     3.0   14.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
