--- a/word_works.ipynb
+++ b/word_works.ipynb
@@ -170,147 +170,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_aplha = ['a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z']"
+    "aplhas = ['a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>letters</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>a</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>b</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>c</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>d</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>e</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>f</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>g</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>h</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>i</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>j</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>k</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>l</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>m</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>n</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>o</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>p</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>q</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>r</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>s</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>t</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>u</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>v</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>w</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>x</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>z</th>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: [a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z]"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dfalpha = pd.DataFrame(df_aplha)\n",
+    "dfalpha = pd.DataFrame(aplhas)\n",
     "dfalpha.columns = ['letters']\n",
     "dfalpha.set_index('letters', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,19 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_count_all = pd.merge(df_counts,df_counts_second,how='left',left_index=True, right_index=True)\n",
-    "df_count_all = pd.merge(df_count_all,df_counts_third,how='left',left_index=True, right_index=True)\n",
-    "df_count_all = pd.merge(df_count_all,df_counts_fourth,how='left',left_index=True, right_index=True)\n",
-    "df_count_all = pd.merge(df_count_all,df_counts_fifth,how='left',left_index=True, right_index=True)"
+    "# dfalpha.merge(df_counts)\n",
+    "dfranks = pd.concat([dfalpha, df_counts], axis=1)\n",
+    "dfranks = pd.concat([dfranks, df_counts_second], axis=1)\n",
+    "dfranks = pd.concat([dfranks, df_counts_third], axis=1)\n",
+    "dfranks = pd.concat([dfranks, df_counts_fourth], axis=1)\n",
+    "dfranks = pd.concat([dfranks, df_counts_fifth], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -368,20 +250,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>s</th>\n",
-       "      <td>399</td>\n",
-       "      <td>23</td>\n",
-       "      <td>85</td>\n",
-       "      <td>178.0</td>\n",
-       "      <td>66.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>c</th>\n",
-       "      <td>224</td>\n",
-       "      <td>42</td>\n",
-       "      <td>61</td>\n",
-       "      <td>162.0</td>\n",
-       "      <td>41.0</td>\n",
+       "      <th>a</th>\n",
+       "      <td>157</td>\n",
+       "      <td>334</td>\n",
+       "      <td>334</td>\n",
+       "      <td>199.0</td>\n",
+       "      <td>93.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
@@ -392,52 +266,12 @@
        "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>p</th>\n",
-       "      <td>158</td>\n",
-       "      <td>58</td>\n",
-       "      <td>59</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>64.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>t</th>\n",
-       "      <td>157</td>\n",
-       "      <td>87</td>\n",
-       "      <td>123</td>\n",
-       "      <td>156.0</td>\n",
-       "      <td>269.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>a</th>\n",
-       "      <td>157</td>\n",
-       "      <td>334</td>\n",
-       "      <td>334</td>\n",
-       "      <td>199.0</td>\n",
-       "      <td>93.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>f</th>\n",
-       "      <td>130</td>\n",
-       "      <td>6</td>\n",
-       "      <td>25</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>32.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>m</th>\n",
-       "      <td>125</td>\n",
-       "      <td>40</td>\n",
-       "      <td>60</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>53.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>g</th>\n",
-       "      <td>124</td>\n",
-       "      <td>10</td>\n",
-       "      <td>73</td>\n",
-       "      <td>86.0</td>\n",
-       "      <td>31.0</td>\n",
+       "      <th>c</th>\n",
+       "      <td>224</td>\n",
+       "      <td>42</td>\n",
+       "      <td>61</td>\n",
+       "      <td>162.0</td>\n",
+       "      <td>41.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>d</th>\n",
@@ -448,28 +282,28 @@
        "      <td>110.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>l</th>\n",
-       "      <td>98</td>\n",
-       "      <td>212</td>\n",
-       "      <td>136</td>\n",
-       "      <td>153.0</td>\n",
-       "      <td>177.0</td>\n",
+       "      <th>e</th>\n",
+       "      <td>72</td>\n",
+       "      <td>262</td>\n",
+       "      <td>197</td>\n",
+       "      <td>261.0</td>\n",
+       "      <td>468.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>r</th>\n",
-       "      <td>83</td>\n",
-       "      <td>268</td>\n",
-       "      <td>187</td>\n",
-       "      <td>185.0</td>\n",
-       "      <td>136.0</td>\n",
+       "      <th>f</th>\n",
+       "      <td>130</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>32.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>w</th>\n",
-       "      <td>81</td>\n",
-       "      <td>46</td>\n",
-       "      <td>23</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>19.0</td>\n",
+       "      <th>g</th>\n",
+       "      <td>124</td>\n",
+       "      <td>10</td>\n",
+       "      <td>73</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>31.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>h</th>\n",
@@ -480,60 +314,12 @@
        "      <td>154.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>e</th>\n",
-       "      <td>72</td>\n",
-       "      <td>262</td>\n",
-       "      <td>197</td>\n",
-       "      <td>261.0</td>\n",
-       "      <td>468.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>v</th>\n",
-       "      <td>43</td>\n",
-       "      <td>13</td>\n",
-       "      <td>51</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>o</th>\n",
-       "      <td>42</td>\n",
-       "      <td>308</td>\n",
-       "      <td>253</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>66.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>n</th>\n",
-       "      <td>39</td>\n",
-       "      <td>82</td>\n",
-       "      <td>153</td>\n",
-       "      <td>190.0</td>\n",
-       "      <td>146.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>i</th>\n",
        "      <td>34</td>\n",
        "      <td>203</td>\n",
        "      <td>262</td>\n",
        "      <td>183.0</td>\n",
        "      <td>19.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>k</th>\n",
-       "      <td>29</td>\n",
-       "      <td>11</td>\n",
-       "      <td>9</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>117.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>q</th>\n",
-       "      <td>26</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>j</th>\n",
@@ -544,12 +330,116 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>k</th>\n",
+       "      <td>29</td>\n",
+       "      <td>11</td>\n",
+       "      <td>9</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>117.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>l</th>\n",
+       "      <td>98</td>\n",
+       "      <td>212</td>\n",
+       "      <td>136</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>177.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>m</th>\n",
+       "      <td>125</td>\n",
+       "      <td>40</td>\n",
+       "      <td>60</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n</th>\n",
+       "      <td>39</td>\n",
+       "      <td>82</td>\n",
+       "      <td>153</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>146.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>o</th>\n",
+       "      <td>42</td>\n",
+       "      <td>308</td>\n",
+       "      <td>253</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>66.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>p</th>\n",
+       "      <td>158</td>\n",
+       "      <td>58</td>\n",
+       "      <td>59</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>q</th>\n",
+       "      <td>26</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r</th>\n",
+       "      <td>83</td>\n",
+       "      <td>268</td>\n",
+       "      <td>187</td>\n",
+       "      <td>185.0</td>\n",
+       "      <td>136.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>s</th>\n",
+       "      <td>399</td>\n",
+       "      <td>23</td>\n",
+       "      <td>85</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>66.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>t</th>\n",
+       "      <td>157</td>\n",
+       "      <td>87</td>\n",
+       "      <td>123</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>269.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>u</th>\n",
        "      <td>23</td>\n",
        "      <td>209</td>\n",
        "      <td>179</td>\n",
        "      <td>87.0</td>\n",
        "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v</th>\n",
+       "      <td>43</td>\n",
+       "      <td>13</td>\n",
+       "      <td>51</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w</th>\n",
+       "      <td>81</td>\n",
+       "      <td>46</td>\n",
+       "      <td>23</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>x</th>\n",
+       "      <td>3</td>\n",
+       "      <td>16</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>14.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>y</th>\n",
@@ -567,55 +457,47 @@
        "      <td>24.0</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>x</th>\n",
-       "      <td>3</td>\n",
-       "      <td>16</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>14.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "   first  second  third  fourth  fifth\n",
-       "s    399      23     85   178.0   66.0\n",
-       "c    224      42     61   162.0   41.0\n",
-       "b    203      18     56    25.0   10.0\n",
-       "p    158      58     59    61.0   64.0\n",
-       "t    157      87    123   156.0  269.0\n",
        "a    157     334    334   199.0   93.0\n",
-       "f    130       6     25    45.0   32.0\n",
-       "m    125      40     60    76.0   53.0\n",
-       "g    124      10     73    86.0   31.0\n",
+       "b    203      18     56    25.0   10.0\n",
+       "c    224      42     61   162.0   41.0\n",
        "d    107      19     78    74.0  110.0\n",
-       "l     98     212    136   153.0  177.0\n",
-       "r     83     268    187   185.0  136.0\n",
-       "w     81      46     23    24.0   19.0\n",
-       "h     76     163     10    34.0  154.0\n",
        "e     72     262    197   261.0  468.0\n",
-       "v     43      13     51    51.0    NaN\n",
-       "o     42     308    253   137.0   66.0\n",
-       "n     39      82    153   190.0  146.0\n",
+       "f    130       6     25    45.0   32.0\n",
+       "g    124      10     73    86.0   31.0\n",
+       "h     76     163     10    34.0  154.0\n",
        "i     34     203    262   183.0   19.0\n",
-       "k     29      11      9    64.0  117.0\n",
-       "q     26       6      1     NaN    NaN\n",
        "j     23       2      3     2.0    NaN\n",
+       "k     29      11      9    64.0  117.0\n",
+       "l     98     212    136   153.0  177.0\n",
+       "m    125      40     60    76.0   53.0\n",
+       "n     39      82    153   190.0  146.0\n",
+       "o     42     308    253   137.0   66.0\n",
+       "p    158      58     59    61.0   64.0\n",
+       "q     26       6      1     NaN    NaN\n",
+       "r     83     268    187   185.0  136.0\n",
+       "s    399      23     85   178.0   66.0\n",
+       "t    157      87    123   156.0  269.0\n",
        "u     23     209    179    87.0    7.0\n",
+       "v     43      13     51    51.0    NaN\n",
+       "w     81      46     23    24.0   19.0\n",
+       "x      3      16     12     3.0   14.0\n",
        "y      9      30     24    10.0  373.0\n",
-       "z      5       2     16    24.0    5.0\n",
-       "x      3      16     12     3.0   14.0"
+       "z      5       2     16    24.0    5.0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_count_all"
+    "dfranks"
    ]
   },
   {
